# ChangeLog for app-i18n/skim
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-i18n/skim/ChangeLog,v 1.27 2005/06/18 15:49:16 usata Exp $

  18 Jun 2005; Mamoru KOMACHI <usata@gentoo.org> -skim-1.0.2.ebuild,
  skim-1.2.3.ebuild:
  Stable on x86.

*skim-1.3.0 (29 May 2005)

  29 May 2005; Mamoru KOMACHI <usata@gentoo.org> -skim-1.2.0.ebuild,
  +skim-1.3.0.ebuild:
  Version bumped (development version).

*skim-1.2.3 (29 May 2005)

  29 May 2005; Mamoru KOMACHI <usata@gentoo.org> skim-1.2.2.ebuild,
  +skim-1.2.3.ebuild:
  Version bumped.

  18 Apr 2005; Michael Hanselmann <hansmi@gentoo.org> skim-1.2.2.ebuild:
  Stable on ppc.

  16 Apr 2005; Mamoru KOMACHI <usata@gentoo.org> -skim-1.2.1.ebuild,
  skim-1.2.2.ebuild:
  Stable on x86.

*skim-1.2.2 (30 Mar 2005)

  30 Mar 2005; Mamoru KOMACHI <usata@gentoo.org>
  -files/skim-1.1.0-types.patch, -skim-1.1.0.ebuild, +skim-1.2.2.ebuild:
  Version bumped.

  27 Mar 2005; Michael Hanselmann <hansmi@gentoo.org> skim-1.2.0.ebuild:
  Stable on ppc.

*skim-1.2.1 (21 Mar 2005)

  21 Mar 2005; Mamoru KOMACHI <usata@gentoo.org>
  +skim-1.2.1.ebuild:
  Version bumped.

  05 Mar 2005; Mamoru KOMACHI <usata@gentoo.org>
  +files/skim-1.0.2-types.patch, +files/skim-1.1.0-types.patch,
  skim-1.1.0.ebuild:
  Added patches to fix type mismatch. See bug #83474.
  Thanks to Federico Zenith <zenith@chemeng.ntnu.no>.

*skim-1.2.0 (05 Mar 2005)

  05 Mar 2005; Mamoru KOMACHI <usata@gentoo.org> skim-1.1.0.ebuild,
  +skim-1.2.0.ebuild:
  Version bumped; bug #83952.
  Thanks to Federico Zenith <zenith@chemeng.ntnu.no>.

  19 Feb 2005; Gregorio Guidi <greg_g@gentoo.org> skim-1.1.0.ebuild:
  Fix usage of kde eclasses.

*skim-1.1.0 (12 Feb 2005)

  12 Feb 2005; Mamoru KOMACHI <usata@gentoo.org> +skim-1.1.0.ebuild:
  Version bumped.

  07 Feb 2005; Simon Stelling <blubb@gentoo.org> skim-1.0.2.ebuild:
  added ~amd64

  05 Feb 2005; Mamoru KOMACHI <usata@gentoo.org> skim-1.0.2.ebuild: