@@ -1,9 +1,21 @@
-MD5 c21c06cc73263838896d0e054fd1efce skim-1.2.3.ebuild 1185
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
+MD5 161bd3c548ca64562a10be9fc7c6a4b1 ChangeLog 3993
 MD5 e92a48548554c80cf90e18df17ff6a82 metadata.xml 156
-MD5 69a7cec096ac59fda2513cabac494360 ChangeLog 3878
-MD5 271f40494b5273083f772fd82ca31213 skim-1.3.0.ebuild 1134
 MD5 76948556132a0e9ad12529762e6826de skim-1.2.2.ebuild 1184
+MD5 c21c06cc73263838896d0e054fd1efce skim-1.2.3.ebuild 1185
+MD5 271f40494b5273083f772fd82ca31213 skim-1.3.0.ebuild 1134
+MD5 f4fdd703970a0cca979bef289bb569b2 skim-1.3.1.ebuild 1134
 MD5 c91303045f74536acab4c1acb4ab9e30 files/digest-skim-1.2.3 64
 MD5 46b544aa0ec42d4b8a5d4a4353b655eb files/digest-skim-1.3.0 64
+MD5 9f3e930c55590fe519f75e387d27ae1f files/digest-skim-1.3.1 64
 MD5 1d5af0e9f04b0051301aa8ecbbe9048f files/skim-1.0.2-types.patch 739
 MD5 8c94392eeeb767d14395bc660631c0f3 files/digest-skim-1.2.2 64
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v1.4.1 (GNU/Linux)
+
+iD8DBQFCvsZ4VWNWqTUmv+0RAgyCAKCqjVjAx0wjPL6sIoNqCBfH1ifhlACePYNi
+Ub7aCRtV0WJVcSWSxkJQtBE=
+=vV/G
+-----END PGP SIGNATURE-----
