@@ -1,0 +1,46 @@
+# Copyright 1999-2005 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/app-i18n/skim/skim-1.3.1.ebuild,v 1.1 2005/06/26 15:26:00 usata Exp $
+
+inherit kde
+
+DESCRIPTION="Smart Common Input Method (SCIM) optimized for KDE"
+HOMEPAGE="http://www.scim-im.org/"
+SRC_URI="mirror://sourceforge/scim/${P}.tar.bz2
+	http://freedesktop.org/~cougar/skim/downloads/${P}.tar.bz2"
+
+LICENSE="GPL-2"
+SLOT="0"
+KEYWORDS="~x86 ~ppc ~amd64"
+IUSE=""
+
+DEPEND="|| ( >=app-i18n/scim-1.3 >=app-i18n/scim-cvs-1.3 )"
+
+need-kde 3.2
+
+src_install() {
+	kde_src_install
+
+	mv ${D}/usr/share/doc/HTML ${D}/usr/share/doc/${PF}/html
+}
+
+pkg_postinst() {
+	einfo
+	einfo "If you want to use Chinese interface, edit your startup script"
+	einfo "such as .xinitrc to incorporate"
+	einfo
+	einfo '	export XMODIFIERS=@im=SCIM'
+	einfo '	export LANG="zh_CN.GBK"'
+	einfo '	startkde'
+	einfo
+	einfo "or if you prefer English interface,"
+	einfo
+	einfo '	export XMODIFIERS=@im=SCIM'
+	einfo '	export LC_CTYPE="zh_CN.GBK"'
+	einfo '	startkde'
+	einfo
+	einfo "and start skim and SCIM by"
+	einfo
+	einfo "	% skim -d"
+	einfo
+}
